# third_party_iptables

./: 0001-musl-build-fix.patch  BUILD.gn  OAT.xml  README.OpenSource  bundle.json  config.h  install.sh  iptables-1.8.7.tar.bz2  iptables.spec
extensions/: BUILD.gn  genClear.py  genInit.py  libxt_quota2.c
include/: xtables-version.h
libiptc/: BUILD.gn
libxtables/: BUILD.gn  xtoptions.c
