# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("libip4tc") {
  sources = [ "//third_party/iptables/libiptc/libip4tc.c" ]

  include_dirs = [
    "//third_party/iptables/libiptc",
    "//third_party/iptables/include",
  ]

  cflags = [
    "-D_LARGEFILE_SOURCE=1",
    "-D_LARGE_FILES",
    "-D_FILE_OFFSET_BITS=64",
    "-D_REENTRANT",
    "-DENABLE_IPV4",
    "-DENABLE_IPV6",
    "-Wall",
    "-Werror",
    "-Wno-pointer-arith",
    "-Wno-sign-compare",
    "-Wno-unused-parameter",
    "-Wno-pointer-sign",
    "-Wno-unused-function",
  ]

  deps = []

  part_name = "netmanager_base"
  subsystem_name = "communication"
}

ohos_static_library("libip6tc") {
  sources = [ "//third_party/iptables/libiptc/libip6tc.c" ]

  include_dirs = [
    "//third_party/iptables/libiptc",
    "//third_party/iptables/include",
  ]
  license_file = "//third_party/iptables/COPYING"
  cflags = [
    "-D_LARGEFILE_SOURCE=1",
    "-D_LARGE_FILES",
    "-D_FILE_OFFSET_BITS=64",
    "-D_REENTRANT",
    "-DENABLE_IPV4",
    "-DENABLE_IPV6",
    "-Wall",
    "-Werror",
    "-Wno-pointer-arith",
    "-Wno-sign-compare",
    "-Wno-unused-parameter",
    "-Wno-pointer-sign",
    "-Wno-unused-function",
  ]

  deps = []

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
